# stax

./: .gitignore  .robin.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  EXIT_CODES.md  Makefile  README.md  action.yml  cliff.toml  design-qa.md  justfile  learnings.md  mkdocs.yml  release.toml  skills.md  t
.cargo/: config.toml
.config/: nextest.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: cross-platform.yml  docs-pages.yml  release.yml  rust-tests.yml
assets/: ci-alert-error.LICENSE.md  ci-alert-success.LICENSE.md
contributions/: DOCS_IMPROVEMENT.md
crates/stax-gui/: Cargo.toml
crates/stax-gui/resources/: AppIcon.icns  Info.plist.in
crates/stax-gui/src/: hydration.rs  lib.rs  main.rs  operation.rs  preferences.rs  startup.rs  state.rs  theme.rs
crates/stax-gui/src/views/: app.rs  changes_pane.rs  hydration_tests.rs  inspector_pane.rs  mod.rs  operation_overlay.rs  operation_tests.rs  project_switcher.rs  stack_pane.rs  stack_topology.rs  tests.rs  text_input.rs  welcome.rs  workspace.rs
desktop/: README.md  app.zon  package-lock.json  package.json
desktop/scripts/: dev-macos-tests.sh  dev-macos.sh  package-macos.sh  smoke-macos.sh
desktop/src/: app.native  engine_bridge.zig  main.zig  model.zig  protocol.zig  tests.zig
docs/: index.md  requirements.txt
docs/commands/: core.md  navigation.md  reference.md  stack-health.md  sweep.md
docs/compatibility/: freephite-graphite.md
docs/concepts/: multiple-stacks.md  stacked-branches.md
docs/configuration/: index.md
docs/getting-started/: install.md  quick-start.md
docs/integrations/: claude-code.md  codex.md  gemini-cli.md  github-native-stacks.md  libghostty.md  opencode.md  pr-templates-and-ai.md  roborev.md  tmux.md
docs/interface/: desktop.md  gui.md  tui.md
docs/plans/: 2026-01-14-pr-template-selector.md  2026-01-30-stax-cascade-command.md  2026-02-02-stax-co-minimal-checkout-design.md
docs/reference/: benchmarks.md  windows.md
docs/safety/: undo-redo.md
docs/stylesheets/: extra.css
docs/superpowers/plans/: 2026-04-12-worktree-removal-ux.md  2026-06-02-pr-readiness-table.md  2026-06-02-pr-readiness-tui.md  2026-07-09-stax-desktop-native.md  2026-07-11-action-first-sync-summary.md  2026-07-11-native-macos-test-performance.md  2026-07-11-worktree-promote.md  2026-07-12-stax-gui-phase-1.md  2026-07-12-stax-gui-phase-2.md  2026-07-13-codex-inspired-gui.md  2026-07-13-connected-stack-rails.md  2026-07-13-diff-cache.md  2026-07-13-stax-gui-phase-3.md  2026-07-13-stax-gui-phase-4.md  2026-07-16-diverged-trunk-update-guard.md  2026-07-16-preserve-sync-worktrees.md  2026-07-20-gh-stack-oauth-diagnostic.md  2026-07-21-gh-stack-v0.0.8-compatibility.md
docs/superpowers/specs/: 2026-04-12-worktree-removal-ux-design.md  2026-05-13-tmux-plugin-design.md  2026-05-28-ci-oneline-mode-design.md  2026-06-02-pr-readiness-table-design.md  2026-06-02-pr-readiness-tui-design.md  2026-07-09-stax-desktop-native-design.md  (+14 more)
docs/workflows/: agent-worktrees.md  merge-and-cascade.md  multi-worktree.md  releasing.md  reporting.md
docs/worktrees/: index.md
examples/codex/: stax-new-agent.md
examples/cursor/: stax-new-agent.md
examples/generic/: stax-new-agent.md
scripts/: application-boundary-lint-tests.sh  application-boundary-lint.py  application-boundary-lint.sh  benchmark-status.sh  build-gui-app.sh  build-gui-icon.sh  clippy-lint-tests.sh  clippy-lint.sh  container-nextest.sh  gui-app-tests.sh  gui-release-tests.sh  gui-release-workflow-tests.sh  install-action.sh  install-gui-tests.sh  install-gui.sh  lint.sh  native-tests-tests.sh  native-tests.sh  package-gui-release.sh  prepare_release.py
src/: cache.rs  cli.rs  entrypoint.rs  errors.rs  lib.rs  main.rs  notifications.rs  parallel.rs  progress.rs  remote.rs  tree.rs  update.rs
src/application/: branch_name.rs  checkout.rs  ci.rs  create.rs  delete.rs  history.rs  mod.rs  model.rs  move_subtree.rs  operation.rs  pull_request.rs  rename.rs  reorder.rs  repository.rs  restack.rs  submit.rs
src/ci/: history.rs  mod.rs  normalize.rs
src/cli/: args.rs  mod.rs  tests.rs
src/commands/: abort.rs  absorb.rs  auth.rs  cascade.rs  changelog.rs  checkout.rs  ci.rs  cli.rs  comments.rs  config.rs  continue_cmd.rs  copy.rs  demo.rs  detach.rs  diff.rs  doctor.rs  draft.rs  edit.rs  freeze.rs  generate.rs  get.rs  github_list.rs  gui.rs  inbox.rs  init.rs  issue.rs  log.rs  merge.rs  merge_queue.rs  merge_rebase.rs  merge_remote.rs  merge_shared.rs  merge_stack.rs  merge_when_ready.rs  mod.rs  models.json  modify.rs  navigate.rs  open.rs  pr.rs  (+25 more)
src/commands/agent/: mod.rs  (+9 more)
src/config/: mod.rs  tests.rs
src/desktop/: action.rs  diff.rs  mod.rs  protocol.rs  snapshot.rs
src/engine/: branch_detect.rs  metadata.rs  mod.rs  picker.rs  restack_preflight.rs  snapshot.rs  stack.rs
src/forge/: gitea.rs  gitlab.rs  mod.rs  model.rs  traits.rs
src/git/: command.rs  mod.rs  refs.rs  repo.rs
src/github/: checks.rs  client.rs  gh_stack.rs  mod.rs  pr.rs  pr_template.rs
src/ops/: mod.rs  receipt.rs  tx.rs
src/tui/: app.rs  event.rs  keys.rs  mod.rs  ui.rs
tasks/: lessons.local.md  lessons.md  todo.md
tests/: abort_tests.rs  absorb_tests.rs  action_installer_tests.rs  additional_coverage_tests.rs  agent_tests.rs  all_tests.rs  application_operation_tests.rs  application_session_tests.rs  auth_tests.rs  changelog_tests.rs  ci_tests.rs  cli_tests.rs  command_coverage_tests.rs  comments_tests.rs  comprehensive_coverage_tests.rs  conflict_handling_tests.rs  continue_tests.rs  copy_tests.rs  create_ai_tests.rs  create_below_tests.rs  create_insert_tests.rs  create_rollback_tests.rs  demo_tests.rs  desktop_tests.rs  detach_tests.rs  doctor_fix_tests.rs  downstack_tests.rs  edge_cases_tests.rs  edit_tests.rs  fix_tests.rs  fold_tests.rs  freeze_tests.rs  get_tests.rs  gh_stack_tests.rs  github_list_tests.rs  gui_command_tests.rs  inbox_tests.rs  integration_tests.rs  navigation_tests.rs  performance_tests.rs  (+31 more)
tests/common/: git_fixture.rs  mod.rs
(+44 files in other folders)
