[package]
name = "stax"
version = "0.1.0"
edition = "2021"
description = "Fast stacked Git branches and PRs"
license = "MIT"
authors = ["Cesar Ferreira"]
repository = "https://github.com/cesarferreira/stax"

[[bin]]
name = "stax"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Git
git2 = "0.20"

# GitHub API
octocrab = "0.44"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Terminal UI
dialoguer = { version = "0.11", features = ["fuzzy-select", "editor"] }
console = "0.15"
colored = "3"

# Error handling
anyhow = "1"

# Config
toml = "0.8"
dirs = "6"
chrono = "0.4"
