[package]
name = "stax-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Native macOS desktop app for stax"
publish = false

[[bin]]
name = "stax-gui"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-channel = "2.5.0"
dirs = "6"
fs4 = "1.1.0"
gpui = { version = "=0.2.2", default-features = false, features = ["font-kit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
stax = { path = "../.." }
tempfile = "3"
unicode-segmentation = "1.13.3"
url = "2.5.8"

[dev-dependencies]
gpui = { version = "=0.2.2", default-features = false, features = ["font-kit", "test-support"] }
